[gd_scene load_steps=11 format=3 uid="uid://cgbf2127bhkwf"]

[ext_resource type="Script" uid="uid://dmu5dlu8f4pxn" path="res://systems/system_manager.gd" id="1_o855j"]
[ext_resource type="Script" uid="uid://yijks42netbo" path="res://systems/db_system/db_system.gd" id="2_oh3ka"]
[ext_resource type="Script" uid="uid://c2xmpue80gfjg" path="res://systems/input_system/input_system.gd" id="2_wbmq8"]
[ext_resource type="Script" uid="uid://cecugiflecpd1" path="res://systems/project_system/project_system.gd" id="3_a5puj"]
[ext_resource type="Script" uid="uid://chqtvbgywsaq1" path="res://systems/tool_system/tool_system.gd" id="4_30wyy"]
[ext_resource type="Script" uid="uid://b72l784w0wx8u" path="res://systems/canvas_system/canvas_system.gd" id="5_0e3a4"]
[ext_resource type="Script" uid="uid://g1jhtmr7lrpv" path="res://systems/color_system/color_system.gd" id="7_r8ait"]
[ext_resource type="Script" uid="uid://6i0srxwhddqa" path="res://systems/undoredo_system/undoredo_system.gd" id="9_r8ait"]
[ext_resource type="Script" uid="uid://ch6ijcql4yrsw" path="res://systems/compute_shader_system/compute_shader_system.gd" id="10_7gdlc"]
[ext_resource type="Script" uid="uid://bg8os0pwxoqdg" path="res://systems/ui_system/ui_system.gd" id="10_hjs4p"]

[node name="SystemManager" type="Node"]
script = ExtResource("1_o855j")

[node name="DBSystem" type="Node" parent="."]
script = ExtResource("2_oh3ka")

[node name="UndoRedoSystem" type="Node" parent="."]
script = ExtResource("9_r8ait")

[node name="InputSystem" type="Node" parent="."]
script = ExtResource("2_wbmq8")

[node name="CanvasSystem" type="Node" parent="."]
script = ExtResource("5_0e3a4")

[node name="ColorSystem" type="Node" parent="."]
script = ExtResource("7_r8ait")

[node name="UISystem" type="Node" parent="."]
script = ExtResource("10_hjs4p")

[node name="ToolSystem" type="Node" parent="."]
script = ExtResource("4_30wyy")

[node name="ProjectSystem" type="Node" parent="."]
script = ExtResource("3_a5puj")

[node name="ComputeShaderSystem" type="Node" parent="."]
script = ExtResource("10_7gdlc")
